# openAnalyze

./: README.md  dummy_reals.csv  openanalyze_readme.md  pyproject.toml  setup.py
src/deepmedia_detector_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/openAnalyze/: convert_to_analyzer_csv.py  deepfake_detection_threshold_analytics_balanced.R  openAnalyze.py  openAnalyze_gui.py  openAnalyze_gui_backup.py  requirements.txt  targeted_Diagnostic.R
src/openAnalyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
